# mcp-tools

./: .gitignore  AUTHENTICATION.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PURPOSE.md  README.md  build.sh  docker-compose.yml  fix-summary.md  jest.config.js  mcp_tools_server.py  package-lock.json  package.json  pyproject.toml  start-server.sh  start.sh  stop-server.sh  stop.sh  tsconfig.json  version.py
common/: __init__.py  __version__.py  base.py
common/auth/: oauth_shell.py
common/config/: __init__.py
common/prompts/: pr_review_prompts.py
common/resources/: __init__.py  service_resources.py
coordinator/: __init__.py  server.py
docker/: coordinator.Dockerfile  reports.Dockerfile  tools.Dockerfile
reports/: __init__.py  server.py
scripts/: start.sh  status.sh  stop.sh
src/: __version__.py  error-handler.ts  http-server-simple.ts  http-server-streaming.ts  http-server.ts  index.ts  mcp_tools_server.py  mcp_tools_server_v1.py  server.ts  session-manager.ts  streaming-executor.ts
src/config/: settings.py
src/prompts/: __init__.py
src/resources/: team_resources.py
src/tools/: __init__.py  basic-tools.ts  code_review.py  jira_transition.py  jira_transitions.py  new-ws-tools.ts  personal_performance.py  pr_violations.py  quarter_over_quarter.py  quarterly_report.py  system.py  tech_design_review.py
src/tools/reports/: __init__.py  base.py  coordinator.py  personal_performance.py  quarter_over_quarter.py  quarterly_report.py
src/tools/work/: __init__.py  enhanced_code_review.py  enhanced_code_review_v2.py  epic_status.py  jira_transitions.py  pr_health.py  pr_violations.py  setup_tools.py  system.py
src/utils/: iterm.ts  tool-executors.ts  validation.ts
src/utils/__tests__/: tool-executors.test.ts  validation.test.ts
tools/: __init__.py  server.py
tools/system/: __init__.py
tools/work/: __init__.py  code_review.py  enhanced_code_review.py  enhanced_code_review_v2.py  epic_status.py  jira_transition.py  jira_transitions.py  pr_health.py  setup_tools.py  system.py  tech_design_review.py
