[project]
name = "mcp-tools"
version = "2.0.0"
description = "FastMCP Tools Server v2.0 - Modular development workflow automation with PR analysis, code review, and deployment tools"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.2",
    "httpx>=0.28.1",
    "psutil>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0", 
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "fastmcp>=2.10.2",
    "httpx>=0.28.1",
    "psutil>=7.0.0",
]
